--- a/Task1-landing_page/REnTO.html
+++ b/Task1-landing_page/REnTO.html
@@ -1,1 +1,249 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>REnTO</title>
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css"
+      integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Dosis&family=Hammersmith+One&family=Jost&family=M+PLUS+Rounded+1c&family=Maven+Pro&family=Poppins:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../CSS/Task1.css" />
+  </head>
+  <body>
+    <div id="container">
+      <div id="navbar">
+        <h2>REnTO</h2>
+        <div id="items">
+          <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+            <li><a href="#">Pricing</a></li>
+          </ul>
+          <button id="login">Login</button>
+        </div>
+      </div>
 
+      <main>
+        <div id="main">
+          <div id="mainleft">
+            <h1>Get Luxury cars at rents at best price.</h1>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Rem,
+              laudantium eius. Mollitia distinctio explicabo porro aliquid
+              deleniti est nesciunt ullam perspiciatis voluptatibus minima.
+              Quod, assumenda?
+            </p>
+          </div>
+          <div id="mainright">
+            <img src="../img/mercedes.png" alt="range rover" />
+          </div>
+        </div>
+
+        <div id="about">
+          <div id="aboutleft">
+            <h4 class="blue">About Us</h4>
+            <h2>More than 180+ special car collection</h2>
+            <p>
+              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore
+              maiores rem autem consequatur nostrum ducimus laborum! Saepe
+              delectus placeat a!
+            </p>
+            <button id="seebtn">
+              see all cars <i class="fa-solid fa-arrow-right"></i>
+            </button>
+          </div>
+          <div id="aboutright">
+            <img
+              src="https://media.gettyimages.com/id/1272746941/photo/used-bmw-cars-parked-at-a-public-car-dealership-in-hamburg-germany.jpg?s=612x612&w=0&k=20&c=AjX_VLiFXYrp7VVM-Gwq87zqpaoSr42gl2MtUMuNvPQ="
+              alt=""
+            />
+          </div>
+        </div>
+
+        <div id="carcard">
+          <h1>Our Car collection</h1>
+
+          <!-- first 3 -->
+          <div class="flex">
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/849/103/783/bmw-bmw-bmw-m3-hd-wallpaper-preview.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">BMW M3</p>
+              </div>
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/563/755/792/mercedes-benz-mercedes-benz-g63-black-car-car-mercedes-benz-g-class-hd-wallpaper-thumb.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">Mercedes G-wagon</p>
+              </div>
+
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/849/103/783/bmw-bmw-bmw-m3-hd-wallpaper-preview.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">Lamborghini Urus</p>
+              </div>
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+          </div>
+
+          <!-- other 3 -->
+          <div class="flex">
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/563/755/792/mercedes-benz-mercedes-benz-g63-black-car-car-mercedes-benz-g-class-hd-wallpaper-thumb.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">Mustang</p>
+              </div>
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/849/103/783/bmw-bmw-bmw-m3-hd-wallpaper-preview.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">Toyota Fortuner</p>
+              </div>
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+
+            <div class="cardc">
+              <img
+                src="https://c4.wallpaperflare.com/wallpaper/563/755/792/mercedes-benz-mercedes-benz-g63-black-car-car-mercedes-benz-g-class-hd-wallpaper-thumb.jpg"
+                alt=""
+              />
+              <div class="pricec">
+                <p>Price: 90$/day</p>
+                <p class="carname">volksWagon polo</p>
+              </div>
+              <div class="bookbutton">
+                <button class="bookbtn">
+                  <i class="fa-solid fa-phone"></i> Book now
+                </button>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div id="service">
+          <img
+            src="https://images.unsplash.com/photo-1492144534655-ae79c964c9d7?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1283&q=80"
+            alt=""
+          />
+          <div id="textbox">
+            <h3 class="blue">Our service</h3>
+            <h1>We provide the best service all over the world</h1>
+          </div>
+          <div id="cards">
+            <div class="card">
+              <h2>Quality Choice</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem, iste?
+              </p>
+            </div>
+            <div class="card">
+              <h2>Fast service</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem, iste?
+              </p>
+            </div>
+            <div class="card">
+              <h2>more options</h2>
+              <p>
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Voluptatem, iste?
+              </p>
+            </div>
+          </div>
+        </div>
+      </main>
+
+      <footer>
+        <div id="footer">
+          <h2>REnTO</h2>
+
+          <div id="optlist">
+            <ul class="flex">
+              <li><a href="#">Home</a></li>
+              <li><a href="#">About Us</a></li>
+              <li><a href="#">Category</a></li>
+              <li><a href="#">Resources</a></li>
+            </ul>
+          </div>
+          <div id="icons">
+            <a href="#"
+              ><i class="fa-brands fa-instagram" style="color: #fcfcfc"></i
+            ></a>
+
+            <a href="#"
+              ><i class="fa-brands fa-facebook" style="color: #ffffff"></i
+            ></a>
+            <a href="#">
+              <i class="fa-brands fa-x-twitter" style="color: #ffffff"></i
+            ></a>
+            <a href="#"
+              ><i class="fa-brands fa-telegram" style="color: #ffffff"></i
+            ></a>
+          </div>
+        </div>
+
+        <p>copyrights &copy; All rights reserved by REnTO 2023</p>
+      </footer>
+    </div>
+  </body>
+</html>
