--- a/Task3_calculator/index.html
+++ b/Task3_calculator/index.html
@@ -1,1 +1,48 @@
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My Calculator!</title>
+    <link rel="stylesheet" href="../CSS/Task3.css" />
+  </head>
+  <body>
+    <div id="container">
+      
+      <div id="calculator">
+        <input type="text" class="display" />
+        <div class="row">
+          <button class="button wide">AC</button>
+          <button class="button">%</button>
+          <button class="button">/</button>
+          <!-- <button class="button">X</button> -->
+        </div>
+        <div class="row">
+          <button class="button">7</button>
+          <button class="button">8</button>
+          <button class="button">9</button>
+          <button class="button">+</button>
+        </div>
+        <div class="row">
+          <button class="button">4</button>
+          <button class="button">5</button>
+          <button class="button">6</button>
+          <button class="button">-</button>
+        </div>
+        <div class="row">
+          <button class="button">1</button>
+          <button class="button">2</button>
+          <button class="button">3</button>
+          <button class="button">*</button>
+        </div>
+        <div class="row">
+          <button class="button wide">0</button>
+          <button class="button">.</button>
+          <button class="button">=</button>
+        </div>
+      </div>
+    </div>
+    <script src="../JS/calci.JS"></script>
+  </body>
+</html>
 
