--- a/Task1-landing_page/REnTO.html
+++ b/Task1-landing_page/REnTO.html
@@ -17,7 +17,7 @@
       href="https://fonts.googleapis.com/css2?family=Dosis&family=Hammersmith+One&family=Jost&family=M+PLUS+Rounded+1c&family=Maven+Pro&family=Poppins:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="../CSS/Task1.css" />
+    <link rel="stylesheet" href="REnTO.css" />
   </head>
   <body>
     <div id="container">
