--- a/Task2_Personal-Portfolio/index.html
+++ b/Task2_Personal-Portfolio/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
     />
     <link href="https://cdn.jsdelivr.net/npm/remixicon@3.5.0/fonts/remixicon.css" rel="stylesheet">
-    <link rel="stylesheet" href="../CSS/portfolio.css" />
+    <link rel="stylesheet" href="portfolio.css" />
   </head>
   <body>
     <div id="container">
