--- a/Task3_calculator/index.html
+++ b/Task3_calculator/index.html
@@ -42,7 +42,7 @@
         </div>
       </div>
     </div>
-    <script src="../JS/calci.JS"></script>
+    <script src="index.js"></script>
   </body>
 </html>
 
